Add login functionality, refactor code & update dependencies
