# src/controllers/register.controller.ts
@@ -1,8 +1,9 @@
 import { Request, Response } from "express";
-import jwt from "jsonwebtoken";
-import { createNewUser, findUser } from "./../adapters";
-import { IUser } from "./../interfaces";
-import { HTTP_STATUS, LogErrorMessage, message } from "./../utils";
+import * as bcrypt from "bcrypt";
+import { createNewUser } from "@src/adapters";
+import { IUser } from "@src/interfaces";
+import { SALT_VALUE } from "@src/constants/constants";
+import { HTTP_STATUS, LogErrorMessage, message } from "@src/utils";
 
 /**
  * Register a new user (Librarian/User)
@@ -12,37 +13,16 @@ import { HTTP_STATUS, LogErrorMessage, message } from "./../utils";
  */
 export const register = async (req: Request, res: Response) => {
     try {
-        const username = req.body.username;
-        const result = await findUser({ username: username });
-        if (result) {
-            return res.status(HTTP_STATUS.BAD_REQUEST).send({
-                successful: false,
-                message: message.Username_Already_Exists,
-            });
-        }
+        const { username, password, role } = req.body;
 
-        const newUserEntry = req.body as IUser;
-        const payload = {
-            username: req.body.username,
-            password: req.body.password,
-            role: req.body.role,
-        };
-
-        const accessToken = jwt.sign(payload, process.env.SECRET_KEY!, {
-            expiresIn: process.env.EXPIRATION_TIME! || "5m",
-        });
+        const hashedPassword: string = await bcrypt.hash(password, SALT_VALUE);
+        const newUserEntry = { username, password: hashedPassword, role } as IUser;
 
         const _id = (await createNewUser(newUserEntry)) as string;
-        return res.status(HTTP_STATUS.CREATED).send({
-            successful: true,
-            message: message.User_Register_Successfully,
-            _id,
-            accessToken,
-        });
+
+        return res.status(HTTP_STATUS.CREATED).send({ successful: true, message: message.User_Register_Successfully, _id });
     } catch (error: unknown) {
         console.log(LogErrorMessage(error));
-        return res
-            .status(HTTP_STATUS.INTERNAL_SERVER_ERROR)
-            .send({ successful: false, message: message.Something_went_wrong });
+        return res.status(HTTP_STATUS.INTERNAL_SERVER_ERROR).send({ successful: false, message: message.Something_went_wrong });
     }
 };
