# src/middlewares/bookValidation.middleware.ts
@@ -1,31 +1,17 @@
 import { Request, Response } from "express";
-import { addBookValidator, bookIsbnValidator } from "./../validators";
-import { HTTP_STATUS } from "./../utils";
+import { addBookValidator, bookIsbnValidator } from "@src/validators";
+import { HTTP_STATUS } from "@src/utils";
 
-export const addBookValidatorMiddleware = (
-    req: Request,
-    res: Response,
-    next: Function
-) => {
+export const addBookValidatorMiddleware = (req: Request, res: Response, next: Function) => {
     const { error } = addBookValidator.validate(req.body);
-    if (error)
-        return res
-            .status(HTTP_STATUS.BAD_REQUEST)
-            .send({ successful: false, error_message: error.message });
+    if (error) return res.status(HTTP_STATUS.BAD_REQUEST).send({ successful: false, error_message: error.message });
 
     next();
 };
 
-export const bookIsbnValidatorMiddleware = (
-    req: Request,
-    res: Response,
-    next: Function
-) => {
+export const bookIsbnValidatorMiddleware = (req: Request, res: Response, next: Function) => {
     const { error } = bookIsbnValidator.validate(req.body);
-    if (error)
-        return res
-            .status(HTTP_STATUS.BAD_REQUEST)
-            .send({ successful: false, error_message: error.message });
+    if (error) return res.status(HTTP_STATUS.BAD_REQUEST).send({ successful: false, error_message: error.message });
 
     next();
 };
