# src/validators/login.validator.ts
@@ -1,0 +1,6 @@
+import { Joi } from "express-validation";
+
+export const loginValidator = Joi.object({
+    username: Joi.string().required(),
+    password: Joi.string().required(),
+});
